ingress-test/kubectl01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubectl01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubectl01
  template:
    metadata:
      name: kubectl01
      labels:
        app: kubectl01
    spec:
      containers:
      - name: kubectl
        image: lachlanevenson/k8s-kubectl
        # ports:
        # - name: http
        #   containerPort: 8080
        #   protocol: TCP
