ingress-test/kubectl01-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubectl01
  labels:
    app: kubectl01
spec:
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: kubectl01
