ingress-test/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-path
  namespace: grafana
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: k-grafana.softworks.co.kr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana-app
            port:
              number: 80
