ingress-test/jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-path
  namespace: jenkins  
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: k-jenkins.softworks.co.kr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins-app
            port:
              name: http
