ingress-test/kiail-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: path
  namespace: istio-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: k-kiali.softworks.co.kr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kiali
            port:
              number: 9090
