ingress-test/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: path
  namespace: prometheus
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: k-prometheus.softworks.co.kr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-app-server
            port:
              number: 80
